# crusti_bat

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/app/: belief_commands.rs  belief_merging_command.rs  mod.rs
src/core/: cnf.rs  maxsat_solver.rs  mod.rs  problems.rs  weighted.rs
src/encodings/: discrepancy_encoding.rs  drastic_distance_encoding.rs  hamming_distance_encoding.rs  leximax_aggregator_encoding.rs  mod.rs  sum_aggregator_encoding.rs  weighted_parallel_counter.rs
src/io/: belief_dimacs.rs  belief_revision_dimacs.rs  cnf_dimacs.rs  merging_dimacs.rs  mod.rs  wcnf_dimacs_2022.rs
