[package]
name = "crusti_bat"
authors = ["Jean-Marie Lagniez <lagniez@cril.fr>", "Emmanuel Lonca <lonca@cril.fr>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "warn"

[lib]
name = "crusti_bat"
path = "src/lib.rs"

[[bin]]
name = "crusti_bat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
crusti_app_helper = {path = "local_crates/crusti_app_helper-v0.1"}
itertools = "0.12.0"
rustc-hash = "1.1.0"
pblib-rs = "0.1"
tempfile = "3"
varisat-dimacs = "0.2.2"
